Add default inputs style settings
[MAILPOET-2599]

--- a/views/form/editor.html
+++ b/views/form/editor.html
@@ -46,6 +46,9 @@
   'formSettingsStylesFontSize': __('Font Size'),
   'formSettingsStylesFontColor': __('Font Color'),
   'formSettingsStylesFontColorInherit': __('Inherit from theme'),
+  'formSettingsInheritStyleFromTheme': __('Inherit style from theme'),
+  'formSettingsDisplayFullWidth': _x('Display Fullwidth', 'A label for checkbox in form style settings'),
+  'formSettingsBold': _x('Bold', 'A label for checkbox in form style settings'),
   'customFieldSettings': _x('Custom field settings', 'A settings section heading'),
   'customFieldsFormSettings': _x('Form settings', 'A settings section heading'),
   'formPlacement': _x('Form Placement', 'A settings section heading'),
