--- a/views/form/editor.html
+++ b/views/form/editor.html
@@ -52,6 +52,7 @@
   'formSettingsBorderSize': _x('Border Size', 'A label for checkbox in form style settings'),
   'formSettingsBorderRadius': _x('Border Radius', 'A label for checkbox in form style settings'),
   'formSettingsBorderColor': _x('Border Color', 'A label for checkbox in form style settings'),
+  'formSettingsApplyToAll': __('Apply styles to all inputs'),
   'customFieldSettings': _x('Custom field settings', 'A settings section heading'),
   'customFieldsFormSettings': _x('Form settings', 'A settings section heading'),
   'formPlacement': _x('Form Placement', 'A settings section heading'),
