Rename main styles files
[MAILPOET-2487]

--- a/views/form/editor.html
+++ b/views/form/editor.html
@@ -1,7 +1,7 @@
 <% extends 'layout.html' %>
 
 <% block after_css %>
-<%= stylesheet('formEditor.css') %>
+<%= stylesheet('mailpoet-form-editor.css') %>
 <%= stylesheet('mailpoet-public.css') %>
 <% endblock %>
 
