Add DefaultSender fields
I could not reuse DefaultSender component from old settings
because it doesn't use the Redux store.
[MAILPOET-2677]

--- a/views/settings.html
+++ b/views/settings.html
@@ -35,13 +35,17 @@
     'saveSettings': __('Save settings'),
     'settingsSaved': __('Settings saved'),
 
+    'defaultSenderTitle': __('Default sender'),
+    'defaultSenderDescription': __('These email addresses will be selected by default for each new email.'),
+    'from': __('From'),
+    'yourName': __('Your name'),
+    'replyTo': __('Reply-to'),
+
+
     'reinstallConfirmation': __('Are you sure? All of your MailPoet data will be permanently erased (newsletters, statistics, subscribers, etc.).'),
     'announcementHeader': __('Get notified when someone subscribes'),
     'announcementParagraph1': __('It’s been a popular feature request from our users, we hope you get lots of emails about all your new subscribers!'),
     'announcementParagraph2': __('(You can turn this feature off if it’s too many emails.)'),
-    'yourName': __('Your name'),
-    'from': __('From'),
-    'replyTo': __('Reply-to'),
 
     'premiumTabActivationKeyLabel': __('Activation Key', 'mailpoet'),
     'premiumTabDescription': __('This key is used to validate your free or paid subscription. Paying customers will enjoy automatic upgrades of their Premium plugin and access to faster support.', 'mailpoet'),
