--- a/assets/css/src/components/newsletter-editor/components/_forms.scss
+++ b/assets/css/src/components/newsletter-editor/components/_forms.scss
@@ -20,7 +20,7 @@
   }
 
   .mailpoet_form_field_optional {
-    color: $primary-inactive-color;
+    color: $color-primary-inactive;
     font-size: .8em;
   }
 
