--- a/assets/css/src/components/listing/_newsletters.scss
+++ b/assets/css/src/components/listing/_newsletters.scss
@@ -1,9 +1,3 @@
-$excellent-badge-color: #2993ab;
-$good-badge-color: #f0b849;
-$bad-badge-color: #d54e21;
-$green-badge-color: #55bd56;
-$video-guide-badge-color: #46b450;
-
 #newsletters_container {
   h2.nav-tab-wrapper {
     margin-bottom: 1rem;
@@ -16,15 +10,15 @@ $video-guide-badge-color: #46b450;
 }
 
 .mailpoet_stat_excellent {
-  color: $excellent-badge-color;
+  color: $badge-color-excellent;
 }
 
 .mailpoet_stat_good {
-  color: $good-badge-color;
+  color: $badge-color-good;
 }
 
 .mailpoet_stat_bad {
-  color: $bad-badge-color;
+  color: $badge-color-bad;
 }
 
 .mailpoet_stat_hidden {
@@ -51,25 +45,25 @@ $video-guide-badge-color: #46b450;
 
 .mailpoet_badge_excellent,
 .mailpoet_badge_teal {
-  background: $excellent-badge-color;
+  background: $badge-color-excellent;
 }
 
 .mailpoet_badge_good,
 .mailpoet_badge_yellow {
-  background: $good-badge-color;
+  background: $badge-color-good;
 }
 
 .mailpoet_badge_bad,
 .mailpoet_badge_red {
-  background: $bad-badge-color;
+  background: $badge-color-bad;
 }
 
 .mailpoet_badge_green {
-  background: $green-badge-color;
+  background: $badge-color-green;
 }
 
 .mailpoet_badge_video {
-  background: $video-guide-badge-color;
+  background: $badge-color-video-guide;
   display: inline-block;
   line-height: 20px;
   padding: 3px 6px;
@@ -79,7 +73,7 @@ $video-guide-badge-color: #46b450;
   &:hover,
   &:active,
   &:focus {
-    background: $green-badge-color;
+    background: $badge-color-green;
     color: #fff;
   }
 
