--- a/assets/css/src/components/newsletter-editor/_layout.scss
+++ b/assets/css/src/components/newsletter-editor/_layout.scss
@@ -1,6 +1,3 @@
-$sidebar-width: 330px;
-$content-border-color: $structure-border-color;
-
 #mailpoet_editor {
   clear: both;
   width: 100%;
@@ -22,7 +19,7 @@ $content-border-color: $structure-border-color;
 }
 
 #mailpoet_editor_main_wrapper {
-  border: 1px solid $content-border-color;
+  border: 1px solid $color-editor-border-structure;
   border-left: 0;
   min-width: 1050px;
   position: relative;
@@ -30,14 +27,14 @@ $content-border-color: $structure-border-color;
 
 #mailpoet_editor_content_container {
   box-sizing: border-box;
-  padding-right: $sidebar-width;
+  padding-right: $newsletter-editor-sidebar-width;
   width: 100%;
 }
 
 #mailpoet_editor_sidebar {
   box-sizing: border-box;
   float: right;
-  width: $sidebar-width;
+  width: $newsletter-editor-sidebar-width;
 }
 
 .mailpoet_newsletter_wrapper {
