--- a/assets/css/src/components/newsletter-editor/components/_sidepanel.scss
+++ b/assets/css/src/components/newsletter-editor/components/_sidepanel.scss
@@ -1,5 +1,3 @@
-$sidepanel-active-heading-color: $primary-active-color;
-
 /* Sidepanel */
 .mailpoet_editor_settings {
   color: $sidebar-text-color;
@@ -38,7 +36,7 @@ $sidepanel-active-heading-color: $primary-active-color;
 }
 
 .mailpoet_sidepanel_field_optional {
-  color: $primary-inactive-color;
+  color: $color-primary-inactive;
   font-size: .8em;
 }
 
