--- a/assets/css/src/components/newsletter-editor/content-blocks/_base.scss
+++ b/assets/css/src/components/newsletter-editor/content-blocks/_base.scss
@@ -1,5 +1,3 @@
-$block-text-line-height: $text-line-height;
-
 .mailpoet_block {
   background-color: inherit;
   box-sizing: border-box;
@@ -8,7 +6,7 @@ $block-text-line-height: $text-line-height;
   position: relative;
 
   > .mailpoet_block_highlight {
-    border: 2px solid $transparent-color;
+    border: 2px solid $color-transparent;
     bottom: 0;
     left: 0;
     pointer-events: none;
@@ -20,7 +18,7 @@ $block-text-line-height: $text-line-height;
   }
 
   &.mailpoet_highlight > .mailpoet_block_highlight {
-    border: 2px solid $editor-content-color !important;
+    border: 2px solid $color-editor-background-content !important;
   }
 
   > .mailpoet_container_horizontal ~ .mailpoet_block_highlight {
@@ -31,7 +29,7 @@ $block-text-line-height: $text-line-height;
   }
 
   &.mailpoet_highlight > .mailpoet_container_horizontal ~ .mailpoet_block_highlight {
-    border: 2px solid $editor-column-color !important;
+    border: 2px solid $color-editor-background-column !important;
   }
 }
 
