--- a/assets/css/src/components/newsletter-editor/content-blocks/_container.scss
+++ b/assets/css/src/components/newsletter-editor/content-blocks/_container.scss
@@ -1,9 +1,3 @@
-$column-margin: 20px;
-$one-column-width: $newsletter-width - (2 * $column-margin);
-$two-column-width: $newsletter-width / 2 - (2 * $column-margin);
-$three-column-width: $newsletter-width / 3 - (2 * $column-margin);
-$two-column-wider-column-width: (($newsletter-width / 3) - $column-margin) * 2;
-
 .mailpoet_container {
   min-height: 15px;
   position: relative;
@@ -81,7 +75,7 @@ $two-column-wider-column-width: (($newsletter-width / 3) - $column-margin) * 2;
 .mailpoet_container_empty {
   background-color: #f2f2f2;
   border-radius: 3px;
-  box-shadow: inset 1px 2px 1px $primary-inactive-color;
+  box-shadow: inset 1px 2px 1px $color-primary-inactive;
   color: #656565;
   margin: 20px;
   padding: 15px;
