--- a/assets/css/src/mailpoet-form-editor.scss
+++ b/assets/css/src/mailpoet-form-editor.scss
@@ -1,3 +1,7 @@
+// 1. Settings
+// Global variables, config switches. Not producing any CSS.
+@import 'settings/form-editor';
+
 @import '../../../node_modules/@wordpress/edit-post/build-style/style';
 @import '../../../node_modules/@wordpress/editor/build-style/style';
 @import '../../../node_modules/@wordpress/components/build-style/style';
